feat: move permalink to data

--- a/source/content/typeMismatch.njk
+++ b/source/content/typeMismatch.njk
@@ -3,7 +3,7 @@ pagination:
   data: typeMismatch
   size: 1
   alias: item
-permalink: "/type-mismatch/{{ item.name | slug }}/"
+permalink: "{{ item.permalink }}"
 ---
 <!doctype html>
 <meta charset="utf-8">
