--- a/source/content/extSpoofing.njk
+++ b/source/content/extSpoofing.njk
@@ -3,7 +3,7 @@ pagination:
   data: extSpoofing
   size: 1
   alias: item
-permalink: "/ext-spoofing/{{ item.name | slug }}/"
+permalink: "{{ item.permalink }}"
 ---
 <!doctype html>
 <meta charset="utf-8">
