feat: provide more descriptive title

--- a/source/content/extSpoofing.njk
+++ b/source/content/extSpoofing.njk
@@ -7,7 +7,7 @@ permalink: "{{ item.permalink }}"
 ---
 <!doctype html>
 <meta charset="utf-8">
-<title>{{ item.name }}</title>
+<title>{{ item.title }}</title>
 <meta name="viewport" content="width=device-width">
 <link
   rel="icon"
