--- a/source/content/pages.njk
+++ b/source/content/pages.njk
@@ -1,6 +1,6 @@
 ---
 pagination:
-  data: typeMismatch
+  data: pages
   size: 1
   alias: item
 permalink: "{{ item.permalink }}"
@@ -10,7 +10,7 @@ permalink: "{{ item.permalink }}"
 <title>{{ item.title }}</title>
 <meta name="viewport" content="width=device-width">
 <link
-  rel="icon"
+  {% if item.shortcut %}rel="shortcut icon"{% else %}rel="icon"{% endif %}
   {% if item.type !== null %}type="{{item.type}}"{% endif %}
   href="{{item.path}}"
 >
@@ -18,6 +18,7 @@ permalink: "{{ item.permalink }}"
 <h1>favicons</h1>
 <p>name: {{ item.path }}</p>
 <p>type: {{ item.type }}</p>
+<p>shortcut: {{ item.shortcut }}</p>
 <figure>
 <img src="{{ item.path }}">
 <figcaption>preview: {{ item.path }}</figcaption>
