--- a/source/content/pages.njk
+++ b/source/content/pages.njk
@@ -15,7 +15,7 @@ permalink: "{{ item.permalink }}"
   href="{{item.path}}"
 >
 <body>
-<h1>favicons</h1>
+<h1>{{ item.title }}</h1>
 <p>name: {{ item.path }}</p>
 <p>type: {{ item.type }}</p>
 <p>shortcut: {{ item.shortcut }}</p>
