feat: add link to home page

--- a/source/content/pages.njk
+++ b/source/content/pages.njk
@@ -23,3 +23,5 @@ permalink: "{{ item.permalink }}"
 <img src="{{ item.iconPath }}">
 <figcaption>preview: {{ item.iconPath }}</figcaption>
 </figure>
+
+<p><a href="/">home</a></p>
