fix: fix template checking if type is set

--- a/source/content/multipleLinks.njk
+++ b/source/content/multipleLinks.njk
@@ -47,7 +47,7 @@ footer {
   {% endif %}
 <dt>type
 <dd>
-  {% if icon.type === null %}
+  {% if icon.type === undefined %}
     not set
   {% elif icon.type === "" %}
     blank (<code>""</code>)
